--- a/css/marca-personal.css
+++ b/css/marca-personal.css
@@ -7,7 +7,7 @@ h1 {
 	color: #F2EF13;  
 }
 
-.header-contenedor {
+.header .contenedor {
 	width: 800px;
 	margin: auto;
 }
@@ -77,4 +77,61 @@ h1 {
 	position: initial;
 	margin-left: -32px;
 	color: #5193B4;
+}
+
+.caja {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.formacion p {
+	margin-left: 500px;
+}
+
+.formacion h2 {
+	margin-top: 65px;
+	margin-left: 632px;
+	color: #474744;
+}
+
+.contenedor-edu {
+	background: #FFFBE0;
+	padding: auto;
+	
+}
+
+.formacion h3 {
+	margin-top: 40px;
+	margin-left: 660px;
+}
+
+.edu-item {
+	margin-top: 0.5em;
+	margin-left: 170px;
+    text-align: center;
+    border-radius: 150px;
+    width: 128px;
+    height: 128px;
+
+}
+
+.carrera p {
+	margin-top: 20px;
+	margin-left: 50px;
+}
+
+.carrera {
+    width: 500px;
+    height: 200px;
+    margin-right: 55px;
+    margin-left: 65px;
+    border: 1px solid #1F313C;
+    border-radius: 8px;
+    text-decoration: none;
+    color: #474744;
+    border-bottom: 4px solid #2994B2;
+    background-color: rgba(255,180,0,0.2);
+    padding: 0.5em;
+
 }
