--- a/css/marca-personal.css
+++ b/css/marca-personal.css
@@ -133,7 +133,7 @@ h1 {
   border-radius: 8px;
   text-decoration: none;
   color: #474744;
-  border-bottom: 4px solid #2994B2;
+  border-bottom: 4px solid #83d2a0;
   background-color: rgba(255,180,0,0.2);
   padding: 0.5em;
   cursor: pointer;
@@ -201,9 +201,8 @@ h1 {
 }
 
 .footer-column-left {
-  margin-left: 80px;
-  margin-right: 40px;
-  margin-top: 40px;
+  margin-left: 46px;
+  margin-top: 59px;
 }
 
 .formulario {
@@ -229,10 +228,9 @@ h1 {
 .contacto {
   display: flow-root;
   width: 300px;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-left: 130px;
-  margin-right: 80px;
+  margin-left: 160px;
+  margin-right: 161px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -262,17 +260,18 @@ h1 {
 	content: url(../icon/gmail.png); 
 }
 
-.enlaces {
+.footer-menu {
 	font-size: 22px;
-  display: inline-flex;
   text-align: center;
-  margin-top: -4px;
   margin-bottom: 10px;
+  margin-top: 12px;
+  border-top: solid #61613c;
 }
 
 .enlaces li {
-	display: flow-root;
-  margin-left: 30px;
+	display: inline-block;
+  margin-left: 80px;
+  margin-top: -10px;
 }
 
 .enlaces a {
@@ -280,40 +279,37 @@ h1 {
 	color: #FFFBE0;
 }
 
+@media screen and (max-width: 1024px) {
+    
+    /*--menu--*/
+  .menu {
+    margin-left: 60px;
+  }
+  
+  .menu li {
+    border-left: solid white;
+  }
 
-@media screen and (max-width:800px) {
+  /*--Footer--*/
+  .footer-column-left {
+      margin-left: 15px;
+      margin-top: -15px;
+    }
 
-.perfil {
-  width: auto;
-  max-width: 800px;
-  margin-left: auto;
-  text-align: center;
+  .contacto {
+    display: flow-root;
+    width: 300px;
+    margin-left: -24px;
+    margin-right: 60px;
+    margin-top: 10px;
+    text-align: center;
+    }
+    /*--Footer--*/
 }
 
-.enlaces {
-    font-size: 20px;
-    display: inline-flex;
-    position: absolute;
-    margin-top: 50px;
-    margin-right: 70px;
-}
-.enlaces li{
-    display: initial;
-    margin-left: 25px;
-}
-
-.edu-item {
-  margin: 0;
-}
-.caja{
-  display: inline-flex;
-  text-align: center;
-  justify-content: center;
-}
-
-.carrera {
-  height: auto;
-  padding: 0;
-}
-
+@media screen and (max-width: 800px){
+  
+  body {
+    border-radius: solid red;
+  }
 }
