--- a/css/marca-personal.css
+++ b/css/marca-personal.css
@@ -11,6 +11,15 @@ h1 {
 	color: #F2EF13;  
 }
 
+label {
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+textarea {
+  margin-bottom: 10px;
+}
+
 .header {
 	width: 800px;
 	margin: auto;
@@ -310,6 +319,98 @@ h1 {
 @media screen and (max-width: 800px){
   
   body {
-    border-radius: solid red;
+    border: solid red;
+  }
+  .menu {
+    margin: 0px;
+  }
+  .menu li {
+    border-left: none;
+  }
+
+  .edu-item {
+    margin-left: 100px;
+    margin-bottom: 12px;
+}
+
+  .carrera p {
+    margin: 0;
+    text-align: center;
+  }
+  
+  /*--Footer--*/
+  .footer-column-left{
+    margin-top: -30px;
+    margin-left: 13px;
+  }
+
+  .col1, .col2 {
+    margin-top: 40px;
+  }
+  
+  .contacto {
+    display: inline-block;
+    margin-left: -175px;
+    margin-right: 30px;
+    margin-top: 20px;
+  }
+  /*--Footer--*/
+
+  /*--Footer-Menu--*/
+  .footer-menu {
+    margin-right: 30px;
+  }
+
+  .enlaces li {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  /*--Footer-Menu--*/
+}
+
+@media screen and (max-width:760px) {
+
+  .caja {
+    display: inline-block;
+    justify-content: space-between;
+    margin-left: 135px;
+  }
+  
+  .carrera{
+    width: 430px;
+    height: 175px
+  }
+
+  .edu-item {
+    display: inline-block;
+    text-align: center;
+    margin-left: 150px;
+  }
+  .formulario {
+    display: inline-block;
+    margin-left: 90px;
+    text-align: justify;
+  }
+  .contacto {
+    width: 335px;
+    margin: 0;
+    margin-top: 40px;
+  }
+  .footer-column-left {
+    margin-left: 210px;
+    text-align: end;
+  }
+
+  .col1 {
+    width: 270px;
+  }
+
+  .col2 {
+    margin-top: 12px;
+  }
+  textarea {
+    /*zoom: 1.5;*/
+    width: 380px;
   }
 }
