--- a/css/marca-personal.css
+++ b/css/marca-personal.css
@@ -1,3 +1,51 @@
+/*<--Fuentes-->*/
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?sqkthl');
+  src:  url('../fonts/icomoon.eot?sqkthl#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?sqkthl') format('truetype'),
+    url('../fonts/icomoon.woff?sqkthl') format('woff'),
+    url('../fonts/icomoon.svg?sqkthl#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-formation:before {
+  content: "\e920";
+}
+.icon-phone:before {
+  content: "\e942";
+}
+.icon-portafolio:before {
+  content: "\e9ae";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-close:before {
+  content: "\ea0d";
+}
+.icon-contacto:before {
+  content: "\ea83";
+}
+
+/*<--Fuentes-->*/
+
 body{
 	margin: 0;
 }
@@ -434,6 +482,21 @@ textarea {
   }
 }
 
+.burger-button {
+  width: 40px;
+  border-radius: 50%;
+  line-height: 40px;
+  height: 40px;
+  text-align: center;
+  display: inline-block;
+  background: #51524c;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  cursor: pointer;
+  z-index: 3;
+}
+
 @media screen and (max-width: 630px) {
   
   .menu {
@@ -445,12 +508,12 @@ textarea {
     display: block;
     text-align: center;
     margin: 0;
-    border-bottom: solid white;
+    border-bottom: 1px solid white;
     padding: 6px;
   }
   
   .menu li:first-child {
-    border-top: solid;
+    border-top: 1px solid;
   }
 
   .menu li:before{
@@ -477,6 +540,34 @@ textarea {
 
   @media screen and (max-width: 500px) {
     
+    .portada .contenedor {
+      position: static;
+    }
+    
+    .menu {
+      background: rgba(255, 60, 88, .8);
+      position: absolute;
+      left: -100%;
+      width: 100%;
+      top: 0;
+      z-index: 2;
+      bottom: 0;
+      right: 0;
+      display: flex;
+      align-items: center;
+      transition: .3s;
+    }
+
+    .menu.active {
+      left: 0;
+    }
+
+    .menu ul {
+      width: auto;
+      flex: 1;
+      margin-left: -40px;
+    }
+
     .carrera {
       width: 300px;
       font-size: 14px
